tests/sksl/errors/OpaqueTypeInArray.dsl.glsl
### Compilation failed:

error: variables of type 'sampler[1]' must be global

error: variables of type 'sampler[1]' must be global

2 errors
